# discord_speaker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
caddy/: Caddyfile
nginx/: default.conf.template
src/: auth.rs  db.rs  discord.rs  main.rs  spotify.rs
terraform/: .terraform.lock.hcl  terraform.tf  terraform.tfvars.example  user-data.sh  user-data.sh.tftpl  variables.tf
