[package]
name = "discord_spotify_speaker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "env"] }
directories = "6.0.0"
poise = "0.6.2"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["form", "json"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
serde = "1.0.228"
serenity = "0.12.5"
songbird = "0.6.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rusqlite = "0.7.0"
tokio-util = "0.7.18"
